--- a/WebSocketClient/Resources/Settings.bundle/moe.nnsnodnb.WebSocketClient.plist
+++ b/WebSocketClient/Resources/Settings.bundle/moe.nnsnodnb.WebSocketClient.plist
@@ -20,6 +20,14 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>moe.nnsnodnb.WebSocketClient/CollectionConcurrencyKit</string>
+			<key>Title</key>
+			<string>CollectionConcurrencyKit</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>moe.nnsnodnb.WebSocketClient/combine-schedulers</string>
 			<key>Title</key>
 			<string>combine-schedulers</string>
@@ -47,6 +55,14 @@
 			<string>moe.nnsnodnb.WebSocketClient/LoggerAPI</string>
 			<key>Title</key>
 			<string>LoggerAPI</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>moe.nnsnodnb.WebSocketClient/SourceKitten</string>
+			<key>Title</key>
+			<string>SourceKitten</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -132,9 +148,41 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>moe.nnsnodnb.WebSocketClient/swift-syntax</string>
+			<key>Title</key>
+			<string>SwiftSyntax</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>moe.nnsnodnb.WebSocketClient/SwiftLint</string>
+			<key>Title</key>
+			<string>SwiftLint</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>moe.nnsnodnb.WebSocketClient/swiftui-navigation</string>
 			<key>Title</key>
 			<string>swiftui-navigation</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>moe.nnsnodnb.WebSocketClient/SwiftyTextTable</string>
+			<key>Title</key>
+			<string>SwiftyTextTable</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>moe.nnsnodnb.WebSocketClient/SWXMLHash</string>
+			<key>Title</key>
+			<string>SWXMLHash</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -159,6 +207,14 @@
 			<string>moe.nnsnodnb.WebSocketClient/YamlSwift</string>
 			<key>Title</key>
 			<string>Yaml</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>moe.nnsnodnb.WebSocketClient/Yams</string>
+			<key>Title</key>
+			<string>Yams</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
