--- a/WebSocketClient/Resources/Settings.bundle/moe.nnsnodnb.WebSocketClient.plist
+++ b/WebSocketClient/Resources/Settings.bundle/moe.nnsnodnb.WebSocketClient.plist
@@ -60,6 +60,14 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>moe.nnsnodnb.WebSocketClient/SFSafeSymbols</string>
+			<key>Title</key>
+			<string>SFSafeSymbols</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>moe.nnsnodnb.WebSocketClient/SourceKitten</string>
 			<key>Title</key>
 			<string>SourceKitten</string>
