--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -33,6 +33,8 @@ opt_in_rules:
   - file_name
   - first_where
   - flatmap_over_map_reduce
+  - force_cast
+  - force_try
   - identical_operands
   - invalid_swiftlint_command
   - joined_default_parameter
