--- a/bitrise.yml
+++ b/bitrise.yml
@@ -3,63 +3,57 @@ format_version: '11'
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 project_type: ios
 workflows:
-  deploy:
-    description: |
-      The workflow tests, builds and deploys the app using *Deploy to bitrise.io* step.
-
-      For testing the *retry_on_failure* test repetition mode is enabled.
-
-      Next steps:
-      - Set up [Connecting to an Apple service with API key](https://devcenter.bitrise.io/en/accounts/connecting-to-services/connecting-to-an-apple-service-with-api-key.html##).
-      - Or further customise code signing following our [iOS code signing](https://devcenter.bitrise.io/en/code-signing/ios-code-signing.html) guide.
-    steps:
-    - activate-ssh-key@4: {}
-    - git-clone@8: {}
-    - xcode-test@4:
-        inputs:
-        - project_path: "$BITRISE_PROJECT_PATH"
-        - scheme: "$BITRISE_SCHEME"
-        - test_repetition_mode: retry_on_failure
-        - cache_level: none
-    - xcode-archive@4:
-        inputs:
-        - project_path: "$BITRISE_PROJECT_PATH"
-        - scheme: "$BITRISE_SCHEME"
-        - distribution_method: "$BITRISE_DISTRIBUTION_METHOD"
-        - automatic_code_signing: api-key
-        - cache_level: none
-    - deploy-to-bitrise-io@2: {}
-  primary:
-    description: |
-      The workflow executes the tests. The *retry_on_failure* test repetition mode is enabled.
-
-      Next steps:
-      - Check out [Getting started with iOS apps](https://devcenter.bitrise.io/en/getting-started/getting-started-with-ios-apps.html).
+  _setup:
     steps:
     - activate-ssh-key@4: {}
     - git-clone@8: {}
     - restore-spm-cache@1: {}
     - script@1:
-        inputs:
-        - content: |-
-            #!/usr/bin/env bash
-            set -e
-            set -o pipefail
-            set -x
+          inputs:
+          - content: |-
+              #!/usr/bin/env bash
+              set -e
+              set -o pipefail
+              set -x
 
-            defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool YES
-        title: Write IDESkipPackagePluginFingerprintValidatation
-    - xcode-test@4:
-        inputs:
-        - project_path: "$BITRISE_PROJECT_PATH"
-        - scheme: "$BITRISE_SCHEME"
-        - test_repetition_mode: retry_on_failure
-        - cache_level: none
+              defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool YES
+          title: Write IDESkipPackagePluginFingerprintValidatation
+  _teardown:
+    steps:
     - save-spm-cache@1: {}
     - deploy-to-bitrise-io@2: {}
-meta:
-  bitrise.io:
-    stack: osx-xcode-14.2.x-ventura
+  deploy:
+    before_run:
+      - _setup
+    steps:
+      - xcode-archive@4:
+          inputs:
+          - project_path: "$BITRISE_PROJECT_PATH"
+          - scheme: "$BITRISE_SCHEME"
+          - distribution_method: "$BITRISE_DISTRIBUTION_METHOD"
+          - automatic_code_signing: api-key
+          - cache_level: none
+    after_run:
+      - _teardown
+  primary:
+    before_run:
+      - _setup
+    steps:
+      - xcode-test@4:
+          inputs:
+          - project_path: "$BITRISE_PROJECT_PATH"
+          - scheme: "$BITRISE_SCHEME"
+          - test_repetition_mode: retry_on_failure
+          - cache_level: none
+    after_run:
+      - _teardown
+
+trigger_map:
+  - push_branch: main
+    workflow: deploy
+  - pull_request_source_branch: '*'
+    workflow: primary
+
 app:
   envs:
   - opts:
@@ -71,3 +65,7 @@ app:
   - opts:
       is_expand: false
     BITRISE_DISTRIBUTION_METHOD: development
+
+meta:
+  bitrise.io:
+    stack: osx-xcode-14.2.x-ventura
