--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,8 @@ DerivedData/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -118,4 +119,7 @@ build-iPhoneSimulator/
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
 
+.swiftpm
 WebSocketClient/Generated/*.swift
+fastlane/*.xml
+fastlane/test_output
