--- a/bitrise.yml
+++ b/bitrise.yml
@@ -30,20 +30,25 @@ workflows:
         inputs:
         - cache_paths: |-
             ./vendor/bundle -> Gemfile.lock
+    - script@1:
+          inputs:
+          - content: cp -r fastlane/test_output/* /Users/vagrant/deploy
     - deploy-to-bitrise-io@2:
         inputs:
         - notify_user_groups: none
-  deploy:
+  adhoc:
     before_run:
       - _setup
     steps:
-      - xcode-archive@4:
+      - script@1:
           inputs:
-          - project_path: "$BITRISE_PROJECT_PATH"
-          - scheme: "$BITRISE_SCHEME"
-          - distribution_method: "$BITRISE_DISTRIBUTION_METHOD"
-          - automatic_code_signing: api-key
-          - cache_level: none
+          - content: |
+              envman add --key MATCH_GIT_PRIVATE_KEY --value "$(echo -n ${GIT_PRIVATE_KEY} | base64 -d)"
+          title: Add MATCH_GIT_PRIVATE_KEY
+      - fastlane@3:
+          inputs:
+          - lane: "adhoc"
+          - update_fastlane: false
     after_run:
       - _teardown
   test:
@@ -54,15 +59,12 @@ workflows:
           inputs:
           - lane: "test"
           - update_fastlane: false
-      - script@1:
-          inputs:
-          - content: cp -r fastlane/test_output/* /Users/vagrant/deploy
     after_run:
       - _teardown
 
 trigger_map:
   - push_branch: main
-    workflow: deploy
+    workflow: adhoc
   - pull_request_source_branch: '*'
     workflow: test
 
@@ -74,9 +76,6 @@ app:
   - opts:
       is_expand: false
     BITRISE_SCHEME: WebSocketClient
-  - opts:
-      is_expand: false
-    BITRISE_DISTRIBUTION_METHOD: development
 
 meta:
   bitrise.io:
