--- a/bitrise.yml
+++ b/bitrise.yml
@@ -84,6 +84,9 @@ app:
   - opts:
       is_expand: false
     BITRISE_SCHEME: WebSocketClient
+  - opts:
+      is_expand: false
+    MATCH_KEYCHAIN_PASSWORD: ""
 
 meta:
   bitrise.io:
