--- a/bitrise.yml
+++ b/bitrise.yml
@@ -50,9 +50,17 @@ workflows:
     steps:
       - script@1:
           inputs:
-          - content: |
+          - content: |-
               envman add --key MATCH_GIT_PRIVATE_KEY --value "$(echo -n ${GIT_PRIVATE_KEY} | base64 -d)"
           title: Add MATCH_GIT_PRIVATE_KEY
+      - file-downloader@1:
+          inputs:
+          - source: "${BITRISEIO_FIREBASE_APP_DISTRIBUTION_KEY_URL}"
+          - destination: "/tmp/app-distribution-key.json"
+      - scirpt@1:
+          inputs:
+          - content: |-
+              envman add --key GOOGLE_APPLICATION_CREDENTIALS --value "/tmp/app-distribution-key.json"
       - fastlane@3:
           inputs:
           - lane: "adhoc"
