--- a/bitrise.yml
+++ b/bitrise.yml
@@ -5,15 +5,44 @@ project_type: ios
 workflows:
   _setup:
     steps:
-    - activate-ssh-key@4: {}
     - git-clone@8: {}
     - script@1:
         run_if: .IsCI
         inputs:
         - content: rbenv global 3.2.1
         title: Switch Ruby version
-    - cache-pull@2: {}
-    - restore-spm-cache@1: {}
+    - restore-cache@1:
+        inputs:
+        - key: |-
+            {{ .OS }}-{{ .Arch }}-rubygems-{{ checksum "Gemfile.lock" }}
+            {{ .OS }}-{{ .Arch }}-rubygems-
+        title: Restore rubygems
+    - script@1:
+        inputs:
+        - content: bundle config set --global path './vendor/bundle'
+        title: Configure Bundler
+    - install-bundler@1: {}
+    - save-cache@1:
+        inputs:
+        - key: '{{ .OS }}-{{ .Arch }}-rubygems-{{ checksum "Gemfile.lock" }}'
+        - paths: ./vendor/bundle
+        title: Save rubygems
+    - restore-cache@1:
+        inputs:
+        - key: |-
+            {{ .OS }}-{{ .Arch }}-swiftpm-{{ checksum "**/Package.resolved" }}
+            {{ .OS }}-{{ .Arch }}-swiftpm-
+        title: Restore Swift Packages
+    - script@1:
+        inputs:
+        - content: bundle exec fastlane resolve_swift_packages
+        title: Resolve Swift Packages
+    - save-cache@1:
+        inputs:
+        - key: '{{ .OS }}-{{ .Arch }}-swiftpm-{{ checksum "**/Package.resolved" }}'
+        - paths: ./.swiftpm
+        - is_key_unique: true
+        title: Save Swift Packages
     - script@1:
         inputs:
         - content: |-
@@ -26,17 +55,11 @@ workflows:
         title: Write IDESkipPackagePluginFingerprintValidatation
   _teardown:
     steps:
-    - save-spm-cache@1: {}
-    - cache-push@2:
-        inputs:
-        - cache_paths: |-
-            ./vendor/bundle -> Gemfile.lock
     - script@1:
         inputs:
         - content: |
-            if [[ -f fastlane/test_output ]]; then
-              cp -r fastlane/test_output/* /Users/vagrant/deploy
-            fi
+            #!/bin/enb bash
+            set -ex
             if [[ -f Products ]]; then
               cp -r Products/* /Users/vagrant/deploy
             fi
@@ -44,15 +67,18 @@ workflows:
     - deploy-to-bitrise-io@2:
         inputs:
         - notify_user_groups: none
+  _prepare_match:
+    steps:
+    - script@1:
+        inputs:
+        - content: |
+            envman add --key MATCH_GIT_PRIVATE_KEY --value "$(echo -n ${GIT_PRIVATE_KEY} | base64 -d)"
+        title: Add MATCH_GIT_PRIVATE_KEY
   adhoc:
     before_run:
       - _setup
+      - _prepare_match
     steps:
-      - script@1:
-          inputs:
-          - content: |-
-              envman add --key MATCH_GIT_PRIVATE_KEY --value "$(echo -n ${GIT_PRIVATE_KEY} | base64 -d)"
-          title: Add MATCH_GIT_PRIVATE_KEY
       - file-downloader@1:
           inputs:
           - source: "${BITRISEIO_FIREBASE_APP_DISTRIBUTION_KEY_URL}"
@@ -67,6 +93,26 @@ workflows:
           - update_fastlane: false
     after_run:
       - _teardown
+  appstore:
+    before_run:
+      - _setup
+      - _prepare_match
+    steps:
+      - fastlane@3:
+          inputs:
+          - lane: "release"
+          - update_fastlane: false
+      - github-release@0:
+          inputs:
+          - api_token: "${GITHUB_TOKEN}"
+          - username: "nnsnodnb"
+          - name: "${BITRISE_GIT_TAG}"
+          - body: "Release ${BITRISE_GIT_TAG}"
+          - files_to_upload: |
+              "Products/WebSocketClient.ipa"
+              "Products/WebSocketClient.app.dSYM.zip"
+    after_run:
+      - _teardown
   test:
     before_run:
       - _setup
@@ -75,6 +121,10 @@ workflows:
           inputs:
           - lane: "test"
           - update_fastlane: false
+      - custom-test-results-export@1:
+          inputs:
+          - test_name: "WebSocketClient Tests"
+          - search_pattern: "*/fastlane/test_output/*"
     after_run:
       - _teardown
 
@@ -92,6 +142,9 @@ app:
   - opts:
       is_expand: false
     BITRISE_SCHEME: WebSocketClient
+  - opts:
+      is_expand: false
+    FASTLANE_XCODEBUILD_SETTINGS_RETRIES: 20
 
 meta:
   bitrise.io:
