--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -1,15 +1,13 @@
-name: Test
+name: AdHoc
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: macos-13
-
-    permissions:
-      checks: write
-      issues: write
-      pull-requests: write
 
     steps:
     - uses: actions/checkout@v3
@@ -37,15 +35,19 @@ jobs:
     - name: Write IDESkipPackagePluginFingerprintValidatation
       run: defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool YES
 
-    - name: Fastlane test
+    - name: Setup app-distribution-key.json
+      env:
+        APP_DISTRIBUTION_KEY_BASE64: ${{ secrets.APP_DISTRIBUTION_KEY_BASE64 }}
+      run: echo "${APP_DISTRIBUTION_KEY_BASE64}" | base64 -d > /tmp/app-distribution-key.json
+
+    - name: Fastlane adhoc
       env:
         FASTLANE_XCODEBUILD_SETTINGS_RETRIES: 20
-      run: bundle exec fastlane test
+        GOOGLE_APPLICATION_CREDENTIALS: /tmp/app-distribution-key.json
+      run: bundle exec fastlane adhoc
 
-    - name: Publish unit test results
-      uses: kishikawakatsumi/xcresulttool@v1
-      if: success() || failure()
+    - name: Upload Products
+      uses: actions/upload-artifact@v3
       with:
-        path: fastlane/test_output/WebSocketClient.xcresult
-        show-passed-tests: false
-        show-code-coverage: false
+        name: websocket-client-adhoc
+        path: Products
