--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -9,6 +9,9 @@ jobs:
   test:
     runs-on: macos-13
 
+    env:
+      FASTLANE_SKIP_UPDATE_CHECK: 1
+
     steps:
     - uses: actions/checkout@v3
 
