--- a/.github/workflows/appstore.yml
+++ b/.github/workflows/appstore.yml
@@ -2,8 +2,8 @@ name: AdHoc
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - "v*.*.*"
 
 jobs:
   test:
@@ -11,6 +11,9 @@ jobs:
 
     env:
       FASTLANE_SKIP_UPDATE_CHECK: 1
+
+    permissions:
+      contents: write
 
     steps:
     - uses: actions/checkout@v3
@@ -38,26 +41,35 @@ jobs:
     - name: Write IDESkipPackagePluginFingerprintValidatation
       run: defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool YES
 
-    - name: Setup app-distribution-key.json
+    - name: Setup app-store-connect-api-key.json
       env:
-        APP_DISTRIBUTION_KEY_BASE64: ${{ secrets.APP_DISTRIBUTION_KEY_BASE64 }}
-      run: echo "${APP_DISTRIBUTION_KEY_BASE64}" | base64 -d > /tmp/app-distribution-key.json
+        APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
+      run: echo "${APP_STORE_CONNECT_API_KEY_BASE64}" | base64 -d > /tmp/app-store-connect-api-key.json
 
-    - name: Fastlane adhoc
+    - name: Fastlane release
       env:
         FASTLANE_XCODEBUILD_SETTINGS_RETRIES: 20
         MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
         MATCH_KEYCHAIN_NAME: "fastlane_keychain"
         MATCH_KEYCHAIN_PASSWORD: ""
-        GOOGLE_APPLICATION_CREDENTIALS: /tmp/app-distribution-key.json
+        APP_STORE_CONNECT_API_KEY_PATH: /tmp/app-store-connect-api-key.json
         GIT_PRIVATE_KEY_BASE64: ${{ secrets.GIT_PRIVATE_KEY_BASE64 }}
       run: |
         MATCH_GIT_PRIVATE_KEY=$(echo -n "${GIT_PRIVATE_KEY_BASE64}" | base64 -d)
         export MATCH_GIT_PRIVATE_KEY
-        bundle exec fastlane adhoc
+        bundle exec fastlane release
 
     - name: Upload Products
       uses: actions/upload-artifact@v3
       with:
-        name: websocket-client-adhoc
+        name: websocket-client-appstore
         path: Products
+
+    - name: Upload Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          Products/WebSocketClient.ipa
+          Products/WebSocketClient.app.dSYM.zip
+        generate_release_notes: true
