--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,9 @@ jobs:
         bundler-cache: true
 
     - name: Select Xcode
-      run: sudo xcode-select -s /Applications/Xcode_14.3.1.app/Contents/Developer
+      run: |
+        sudo xcode-select -s /Applications/Xcode_14.3.1.app/Contents/Developer
+        xcodebuild -version
 
     - name: Cache Swift Packages
       uses: actions/cache@v3
