--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: [pull_request]
 
 jobs:
   test:
-    runs-on: macos-13
+    runs-on: macos-13-xl
 
     env:
       FASTLANE_SKIP_UPDATE_CHECK: 1
