--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Download SwiftLint
       if: steps.cache-swiftlint.outputs.cache-hit != 'true'
       run: |
-        version=$(jq -r '.pins[] | select( .identity == "swiftlint" ) | .state.version' < WebSocketClient.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved)
+        version=$(jq -r '.pins[] | select( .identity == "swiftlint" ) | .state.version' < WebSocketClient.xcworkspace/xcshareddata/swiftpm/Package.resolved)
         mkdir swiftlint
         cd swiftlint
         wget "https://github.com/realm/SwiftLint/releases/download/${version}/portable_swiftlint.zip"
