--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,22 +35,24 @@ jobs:
         path: .swiftpm
         key: ${{ runner.os }}-swiftpm-${{ hashFiles('WebSocketClient.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved') }}
 
-    - name: Swift Packages Resolve
-      if: steps.cache-swiftpm.outputs.cache-hit != 'true'
-      run: bundle exec fastlane resolve_swift_packages
-
     - name: Write IDESkipPackagePluginFingerprintValidatation
       run: defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool YES
 
     - name: Fastlane test
       env:
         FASTLANE_XCODEBUILD_SETTINGS_RETRIES: 20
-      run: bundle exec fastlane test
+        DEVICE_TYPE: com.apple.CoreSimulator.SimDeviceType.iPhone-14-Pro
+        RUNTIME: com.apple.CoreSimulator.SimRuntime.iOS-16-4
+      run: |
+        device_id="$(xcrun simctl create "Test" "${DEVICE_TYPE}" "${RUNTIME}")"
+        echo "Boot ${device_id}"
+        xcrun simctl boot "${device_id}"
+        bundle exec fastlane test device_id:"${device_id}"
 
     - name: Publish unit test results
       uses: kishikawakatsumi/xcresulttool@v1
       if: success() || failure()
       with:
-        path: fastlane/test_output/WebSocketClient.xcresult
+        path: TestResults.xcresult
         show-passed-tests: false
         show-code-coverage: false
