--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,6 +53,6 @@ jobs:
       uses: kishikawakatsumi/xcresulttool@v1
       if: success() || failure()
       with:
-        path: TestResults.xcresult
+        path: fastlane/test_output/WebSocketClientPackage.xcresult
         show-passed-tests: false
         show-code-coverage: false
