--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,10 +43,7 @@ jobs:
         FASTLANE_XCODEBUILD_SETTINGS_RETRIES: 20
         FASTLANE_SKIP_UPDATE_CHECK: 1
       run: |
-        device_id="$(xcrun simctl create "Test" "${DEVICE_TYPE}" "${RUNTIME}")"
-        echo "Boot ${device_id}"
-        xcrun simctl boot "${device_id}"
-        bundle exec fastlane test device_id:"${device_id}"
+        bundle exec fastlane test
 
     - name: Publish unit test results
       uses: kishikawakatsumi/xcresulttool@v1
