--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,6 +43,7 @@ jobs:
         FASTLANE_XCODEBUILD_SETTINGS_RETRIES: 20
         FASTLANE_SKIP_UPDATE_CHECK: 1
       run: |
+        cp WebSocketClient.xcworkspace/xcshareddata/swiftpm/Package.resolved WebSocketClientPackage/
         bundle exec fastlane test
 
     - name: Publish unit test results
