--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,6 +1,13 @@
 name: Lint
 
-on: [pull_request]
+on:
+  pull_request:
+    paths:
+      - .github/workflows/**
+      - Dangerfile
+      - scripts/danger/**
+      - Gemfile
+      - Gemfile.lock
 
 jobs:
   actionlint:
