--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,12 @@
 name: Test
 
-on: [pull_request]
+on:
+  pull_request:
+    paths-ignore:
+      - .github/workflows/lint.yml
+      - LICENSE
+      - README.md
+      - renovate.json
 
 jobs:
   test:
