--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -8,6 +8,11 @@ on:
 jobs:
   precheck:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      pull-requests: read
+
     outputs:
       files_changes: ${{ steps.files_changes.outputs.files }}
     steps:
