Update paths-ignore for test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,10 @@ name: Test
 on:
   pull_request:
     paths-ignore:
+      - .github/workflows/adhoc.yml
+      - .github/workflows/appstore.yml
       - .github/workflows/lint.yml
+      - .github/workflows/renovate.yml
       - LICENSE
       - README.md
       - renovate.json
