--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Setup Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: "3.2"
+        bundler-cache: true
+
     - name: Select Xcode
       run: |
         sudo xcode-select -s /Applications/Xcode_14.3.1.app/Contents/Developer
