Add timeout-minutes in cache pull

--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Cache Swift Packages
       uses: actions/cache@v3
       id: cache-swiftpm
+      timeout-minutes: 20
       with:
         path: .swiftpm
         key: ${{ runner.os }}-swiftpm-${{ hashFiles('WebSocketClient.xcworkspace/xcshareddata/swiftpm/Package.resolved') }}
