--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -34,6 +34,7 @@ jobs:
 
     - name: Cache Swift Packages
       uses: actions/cache@v3
+      timeout-minutes: 20
       with:
         path: .swiftpm
         key: ${{ runner.os }}-swiftpm-${{ hashFiles('WebSocketClient.xcworkspace/xcshareddata/swiftpm/Package.resolved') }}
