--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,25 +48,28 @@ jobs:
     - name: Write IDESkipPackagePluginFingerprintValidatation
       run: defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool YES
 
+    - name: Copy Package.resolve from workspace
+      run: cp WebSocketClient.xcworkspace/xcshareddata/swiftpm/Package.resolved WebSocketClientPackage
+
     - name: xcodebuild test
+      working-directory: WebSocketClientPackage
       env:
         DEVICE_NAME: iPhone 14 Pro Max
         OS: 16.4
       run: |
         rm -rf TestResults.xctest
         set -o pipefail && env NSUnbufferedIO=YES xcodebuild test clean \
-          -workspace WebSocketClient.xcworkspace \
-          -scheme WebSocketClientPackageTests \
-          -clonedSourcePackagesDirPath .swiftpm \
+          -scheme WebSocketClientPackage \
+          -clonedSourcePackagesDirPath ../.swiftpm \
           -disableAutomaticPackageResolution \
           -sdk iphonesimulator \
-          -destination "platform=iOS Simulator,name=${DEVICE_NAME},OS=${OS}" \
+          -destination "platform=iOS Simulator,OS=${OS},name=${DEVICE_NAME}" \
           -resultBundlePath TestResults.xcresult | bundle exec xcpretty
 
     - name: Publish unit test results
       uses: kishikawakatsumi/xcresulttool@v1
       if: success() || failure()
       with:
-        path: TestResults.xcresult
+        path: WebSocketClientPackage/TestResults.xcresult
         show-passed-tests: false
         show-code-coverage: false
