--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -28,7 +28,12 @@ jobs:
     if: contains(fromJson(needs.precheck.outputs.files_changes), 'WebSocketClient.xcworkspace/xcshareddata/swiftpm/Package.resolved') == false
 
     steps:
-    - name: Configure GITHUB_APPS_TOKEN
+    - uses: Cyberbeni/install-swift-tool@v2
+      with:
+        url: https://github.com/nnsnodnb/github-apps-token-swift
+        version: '*'
+
+    - name: Configure Access Token for GitHub Apps
       env:
         APP_ID: ${{ secrets.APP_ID }}
         PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
@@ -52,11 +57,6 @@ jobs:
       run: |
         sudo xcode-select -s /Applications/Xcode_14.3.1.app/Contents/Developer
         xcodebuild -version
-
-    - uses: Cyberbeni/install-swift-tool@v2
-      with:
-        url: https://github.com/nnsnodnb/github-apps-token-swift
-        version: '*'
 
     - name: Cache Swift Packages
       uses: actions/cache@v3
@@ -82,3 +82,7 @@ jobs:
         if git commit -m "Resolve Swift Package"; then
           git push origin "HEAD:${HEAD_REF}"
         fi
+
+    - name: Revoke Access Token for GitHub Apps
+      if: success() || failure()
+      run: github-apps-token revoke --token "${GITHUB_APPS_TOKEN}"
