--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,31 +42,30 @@ jobs:
       id: cache-swiftpm
       timeout-minutes: 20
       with:
-        path: .swiftpm
+        path: WebSocketClientPackage/.swiftpm
         key: ${{ runner.os }}-swiftpm-${{ hashFiles('WebSocketClient.xcworkspace/xcshareddata/swiftpm/Package.resolved') }}
 
     - name: Write IDESkipPackagePluginFingerprintValidatation
       run: defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool YES
 
+    - name: Copy Package.resolved
+      run: cp WebSocketClient.xcworkspace/xcshareddata/swiftpm/Package.resolved WebSocketClientPackage/
+
     - name: xcodebuild test
-      env:
-        DEVICE_NAME: iPhone 14 Pro Max
-        OS: 16.4
+      working-directory: WebSocketClientPackage
       run: |
+        sleep 2
         rm -rf TestResults.xctest
         set -o pipefail && env NSUnbufferedIO=YES xcodebuild test clean \
-          -workspace WebSocketClient.xcworkspace \
-          -scheme WebSocketClientPackageTests \
-          -clonedSourcePackagesDirPath .swiftpm \
-          -disableAutomaticPackageResolution \
+          -scheme WebSocketClientPackage \
           -sdk iphonesimulator \
-          -destination "platform=iOS Simulator,name=${DEVICE_NAME},OS=${OS}" \
+          -destination "platform=iOS Simulator,name=iPhone 14 Pro,OS=16.4" \
           -resultBundlePath TestResults.xcresult | bundle exec xcpretty
 
     - name: Publish unit test results
       uses: kishikawakatsumi/xcresulttool@v1
       if: success() || failure()
       with:
-        path: TestResults.xcresult
+        path: WebSocketClientPackage/TestResults.xcresult
         show-passed-tests: false
         show-code-coverage: false
