Update test command

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -36,5 +36,4 @@ workflows:
               -sdk iphonesimulator \
               -destination "platform=iOS Simulator,name=iPhone 14 Pro,OS=16.4" \
               -disableAutomaticPackageResolution \
-              -derivedDataPath .DerivedDataPath \
-              -resultBundlePath TestResults.xcresult | xcpretty
+              -resultBundlePath TestResults.xcresult 2>&1 | xcpretty
