--- a/bitrise.yml
+++ b/bitrise.yml
@@ -21,25 +21,14 @@ workflows:
     - script@1:
         title: Copy Package.resolved
         inputs:
-        - content: cp WebSocketClient.xcworkspace/xcshareddata/swiftpm/Package.resolved WebSocketClientPackage/
-    - change-workdir@1:
-        inputs:
-        - is_create_path: 'false'
-        - path: "${BITRISE_SOURCE_DIR}/WebSocketClientPackage"
+        - content: cp WebSocketClient.xcworkspace/xcshareddata/swiftpm/Package.resolved
+            WebSocketClientPackage/
     - xcode-test@5:
         inputs:
         - scheme: WebSocketClientPackage
-        - xcodebuild_options: "-disableAutomaticPackageResolution"
-        - project_path: "$BITRISE_PROJECT_PATH/WebSocketClientPackage"
+        - xcodebuild_options: "-disableAutomaticPackageResolution -skipPackagePluginValidation"
+        - project_path: "${BITRISE_SOURCE_DIR}/WebSocketClientPackage/Package.swift"
     - deploy-to-bitrise-io@2: {}
-    # - script@1:
-    #     title: Xcodebuild test
-    #     inputs:
-    #     - content: |-
-    #         defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool YES
-    #         set -o pipefail && env NSUnbufferedIO=YES xcodebuild test \
-    #           -scheme WebSocketClientPackage \
-    #           -sdk iphonesimulator \
-    #           -destination "platform=iOS Simulator,name=iPhone 14 Pro,OS=16.4" \
-    #           -disableAutomaticPackageResolution \
-    #           -resultBundlePath TestResults.xcresult 2>&1 | xcpretty
+
+app:
+  envs: []
