--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -13,7 +13,7 @@ jobs:
       FASTLANE_SKIP_UPDATE_CHECK: 1
 
     steps:
-    - uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
+    - uses: actions/checkout@v4
 
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
