--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -17,7 +17,7 @@ jobs:
       files_changes: ${{ steps.files_changes.outputs.files }}
 
     steps:
-    - uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
+    - uses: actions/checkout@v4
 
     - uses: trilom/file-changes-action@v1.2.4
       id: files_changes
