--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -49,7 +49,7 @@ jobs:
         echo "token=${token}" >> "${GITHUB_OUTPUT}"
         rm /tmp/github-apps-private-key.pem
 
-    - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
         token: ${{ steps.get-github-app.outputs.token }}
