--- a/bitrise.yml
+++ b/bitrise.yml
@@ -5,7 +5,7 @@ project_type: ios
 
 meta:
   bitrise.io:
-    stack: osx-xcode-14.3.x-ventura
+    stack: osx-xcode-15.0.x
     machine_type_id: g2-m1.4core
 
 trigger_map:
