--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -11,6 +11,7 @@ jobs:
 
     env:
       FASTLANE_SKIP_UPDATE_CHECK: 1
+      DEVELOPER_DIR: /Applications/Xcode_15.0.app/Contents/Developer
 
     steps:
     - uses: actions/checkout@v4
@@ -20,11 +21,6 @@ jobs:
       with:
         ruby-version: "3.2"
         bundler-cache: true
-
-    - name: Select Xcode
-      run: |
-        sudo xcode-select -s /Applications/Xcode_15.0.0.app/Contents/Developer
-        xcodebuild -version
 
     - name: Cache Swift Packages
       uses: actions/cache@v3
