--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
               -scheme WebSocketClientPackageTests \
               -workspace WebSocketClient.xcworkspace \
               -parallel-testing-enabled=YES \
-              -destination "platform=iOS Simulator,name=iPhone 15 Pro" \
+              -destination "platform=iOS Simulator,name=iPhone 15 Pro,OS=latest" \
               -resultBundlePath "Test-WebSocketClientPackageTests.xcresult" \
               -disableAutomaticPackageResolution | xcpretty
 
